Hack DTLN into the build system
This adds a `atob` polyfill for the base64 encoded wasm blob. I'm pretty
sure it's incorrect.

I also replaced the `module.exports` method with an `export default` in
the bundle. I had to prettify it to make it work. Jason, recommend
recompiling this with the change.

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "http-server": "^14.1.1",
     "vite": "^6.0.3"
+  },
+  "dependencies": {
+    "buffer": "^6.0.3"
   }
 }
